# QtTest

./: CMakeLists.txt  main.cpp
